<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/toolbarreal"
        android:orientation="horizontal">




        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:src="@drawable/ic_tvs_race1" />
    </LinearLayout>


    <Button
        android:id="@+id/buttonretry"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="299dp"
        android:background="@drawable/basic_buttongreen"
        android:text="@string/reconnect"
        android:textColor="@color/colorwhite"
        android:textSize="22sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/buttonclose"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonretry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:background="@drawable/basic_buttonash"
        android:text="@string/exit"
        android:textColor="@color/colorwhite"
        android:textSize="22sp"
        />



    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonretry"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp"
        android:padding="50dp"
        android:layout_centerInParent="true"
        android:text="@string/disconnectedfromvci"
        android:gravity="center"
        android:textColor="@color/colorwhite"
        android:textSize="40sp" />

</RelativeLayout>
